--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Listing restaurants</h1>
+<div class ="jumbotron">
+<h2>Yelpdemo is the best way to find reviews on local restaurants.</h2>
+<h3>Explore the favorite diners, pastry shops, and eateries in your community.
+<br>Leave reviews and ratings for your fellow foodies.</h3>
+</div>
 
 <table class="table table-hover table-condensed">
   <thead>
@@ -29,3 +33,5 @@
 <br>
 
 <%= link_to 'New Restaurant', new_restaurant_path %>
+
+<%= image_tag "//s3-media4.ak.yelpcdn.com/assets/2/www/img/e41bc8917803/structural/happy_footer.png" %>
