Embed Google maps

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -25,6 +25,18 @@
     </p>
 
     <%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
+
+    <br>
+    <br>
+
+    <iframe
+      width="230"
+      height="230"
+      frameborder="0" style="border:0"
+      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCMVnCBVaopeWuyyoQDFW2cEOdNidGA-vU
+        &q=<%= @restaurant.address.parameterize %>&zoom=14">
+    </iframe>
+
   </div>
    
   <div class="col-md-9">
@@ -56,7 +68,7 @@
                     <%= link_to "Delete", restaurant_review_path(@restaurant, review), method: :delete %>
                   <% end %>
                 <% end %>
-                
+
               </td>
             </tr>
           <% end %>
